--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "vue": "^3.2.38",
     "vue-router": "^4.2.2",
     "vue-select": "^4.0.0-beta.6",
+    "vue-tippy": "^6.6.0",
     "yup": "^1.2.0"
   },
   "devDependencies": {
