--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "npm": "^10.9.1",
     "pinia": "^2.1.4",
     "vue": "^3.2.38",
+    "vue-draggable-plus": "^0.6.0",
     "vue-router": "^4.2.2",
     "vue-select": "^4.0.0-beta.6",
     "vue-tippy": "^6.7.0",
