--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite --port 8888",
+    "dev:publishing": "vite --mode publishing --port 9999",
     "build": "vite build",
     "preview": "vite preview --port 4173",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
@@ -18,7 +19,6 @@
     "pinia": "^2.1.4",
     "vue": "^3.2.38",
     "vue-draggable-plus": "^0.6.0",
-    "vue-number-animation": "^2.0.2",
     "vue-router": "^4.2.2",
     "vue-select": "^4.0.0-beta.6",
     "vue-tippy": "^6.7.0",
